@@ -6,6 +6,8 @@ import(Snowball)
 import(XML)
 
 export(
+       "activateCluster",
+       "deactivateCluster",
        "stemCompletion",
        "getFilters",
        "getReaders",
