@@ -1,3 +1,3 @@
 clusterAvailable <- function() {
-    suppressWarnings(require("snow", quietly = TRUE)) && suppressWarnings(require("Rmpi", quietly = TRUE)) && !is.null(snow::getMPIcluster())
+    clActive() && suppressWarnings(require("snow", quietly = TRUE)) && suppressWarnings(require("Rmpi", quietly = TRUE)) && !is.null(snow::getMPIcluster())
 }
